--- a/src/scss/libs/_footer.scss
+++ b/src/scss/libs/_footer.scss
@@ -107,6 +107,11 @@
     background: #2962EF;
     border-radius: 4px;
     right: 8px;
+    transition: all .3s ease;
+}
+.footer__btn:hover{
+    cursor: pointer;
+    background: #0d48df;
 }
 .footer__btn img{
     padding: 2px 0 0 4px;
